# tommys_blog

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yaml
backend/: Cargo.toml
backend/migrations/: 20250504002707_create_posts_table.up.sql
backend/src/: config.rs  ids.rs  lib.rs  macros.rs  main.rs  server.rs
backend/src/api/: health.rs  mappers.rs  mod.rs  post.rs  responses.rs
backend/src/db/: mod.rs  postgres.rs
backend/src/db/models/: post.rs
backend/src/db/query/: post.rs
backend/src/domain/: repository.rs  service.rs
backend/src/domain/models/: post.rs
backend/src/domain/models/post/: errors.rs  mod.rs  model.rs  requests.rs
backend/src/repository/: mappers.rs  mod.rs
backend/src/service/: mappers.rs  mod.rs
backend/tests/: common.rs  test_create_post.rs  test_posts.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/: HelloWorld.vue
