[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = [
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
    "time",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
mockall = "0.13.1"
serde_json = "1.0.140"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.0", features = ["postgres"] }
tower = "0.5.2"
